{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 96,
  "lineage": "a91160bd-6232-7862-d35b-30325939ed05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.40",
            "association_id": "eipassoc-01a8e5f270859b4a5",
            "domain": "vpc",
            "id": "eipalloc-03c4230cde900c1d8",
            "instance": "i-028e0b06d75536c91",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0f7a7af8247d3245e",
            "private_dns": "ip-10-0-1-40.eu-north-1.compute.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-16-170-136-170.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.136.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-prod",
            "aws_network_interface.multi-ip",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-server-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff338189efb7ed37",
            "arn": "arn:aws:ec2:eu-north-1:602348258791:instance/i-028f26f4b6a6548ee",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028f26f4b6a6548ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04fc238eb86ab3ef9",
            "private_dns": "ip-172-31-3-104.eu-north-1.compute.internal",
            "private_ip": "172.31.3.104",
            "public_dns": "ec2-13-51-36-160.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.36.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c8044bfa43860d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-eb8557a6",
            "tags": {
              "Name": "ubuntu-server-a"
            },
            "tags_all": {
              "Name": "ubuntu-server-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-b0dc34d6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-server-with-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff338189efb7ed37",
            "arn": "arn:aws:ec2:eu-north-1:602348258791:instance/i-028e0b06d75536c91",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028e0b06d75536c91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stockholm-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f7a7af8247d3245e"
              }
            ],
            "primary_network_interface_id": "eni-0f7a7af8247d3245e",
            "private_dns": "ip-10-0-1-40.eu-north-1.compute.internal",
            "private_ip": "10.0.1.40",
            "public_ip": "16.170.136.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c64b2c63dcdd9bfa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "10.0.1.50"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffe6dcf3b103c44c",
            "tags": {
              "Name": "ubuntu-server-b"
            },
            "tags_all": {
              "Name": "ubuntu-server-b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bd098d35b8e9311e"
            ]
          },
          "dependencies": [
            "aws_network_interface.multi-ip",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:internet-gateway/igw-056a6f96dd9d8c7d0",
            "id": "igw-056a6f96dd9d8c7d0",
            "owner_id": "602348258791",
            "vpc_id": "vpc-03315146c6351bdd1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "multi-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-06a7b8a74a04ebbf5",
                "device_index": 0,
                "instance": "i-028e0b06d75536c91"
              }
            ],
            "id": "eni-0f7a7af8247d3245e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0a:ee:cb:d4:ed:92",
            "private_ip": "10.0.1.40",
            "private_ips": [
              "10.0.1.40",
              "10.0.1.50"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0bd098d35b8e9311e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffe6dcf3b103c44c"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:route-table/rtb-06bff5f0f142e9e9b",
            "id": "rtb-06bff5f0f142e9e9b",
            "owner_id": "602348258791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056a6f96dd9d8c7d0",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056a6f96dd9d8c7d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-03315146c6351bdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-prod",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025c730b527d1f8f1",
            "route_table_id": "rtb-06bff5f0f142e9e9b",
            "subnet_id": "subnet-0ffe6dcf3b103c44c"
          },
          "dependencies": [
            "aws_internet_gateway.igw-prod",
            "aws_route_table.rt-prod",
            "aws_subnet.subnet-1",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:security-group/sg-0bd098d35b8e9311e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd098d35b8e9311e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "602348258791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03315146c6351bdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:subnet/subnet-0ffe6dcf3b103c44c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ffe6dcf3b103c44c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602348258791",
            "tags": {
              "Name": "public-subnet-3a"
            },
            "tags_all": {
              "Name": "public-subnet-3a"
            },
            "vpc_id": "vpc-03315146c6351bdd1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:subnet/subnet-0d42ecf0ceff1f48f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d42ecf0ceff1f48f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602348258791",
            "tags": {
              "Name": "public-subnet-3b"
            },
            "tags_all": {
              "Name": "public-subnet-3b"
            },
            "vpc_id": "vpc-03315146c6351bdd1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602348258791:vpc/vpc-03315146c6351bdd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6492816c3954495",
            "default_route_table_id": "rtb-0166b1f5c10e89346",
            "default_security_group_id": "sg-0d7561b60b19e91e3",
            "dhcp_options_id": "dopt-f30e9e9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03315146c6351bdd1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0166b1f5c10e89346",
            "owner_id": "602348258791",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}